# game_sales_scrapper

./: Cargo.toml  README.md  Roadmap.md
.github/workflows/: build.yml  rust.yml  tests.yml
Recreation/game_sales_scrapper/: .env.template  .gitignore  README.md
Recreation/game_sales_scrapper/src/data/: json.rs  settings.rs  thresholds.rs
Recreation/game_sales_scrapper/src/store_api/: steam.rs
crates/alerting/: Cargo.toml
crates/alerting/src/: email.rs
crates/file_ops/: Cargo.toml
crates/file_ops/src/: lib.rs  settings.rs  thresholds.rs
crates/file_types/: Cargo.toml
crates/file_types/src/: csv.rs  json.rs  lib.rs  properties.rs
crates/properties/: Cargo.toml
crates/properties/src/: env_vars.rs  lib.rs  passwords.rs
crates/stores/: Cargo.toml
crates/stores/src/: gog.rs  lib.rs  microsoft_store.rs  steam.rs
crates/structs/: Cargo.toml
crates/structs/src/: lib.rs
setup/actions/: create_env_file.ps1  double_slash.py
setup/pipeline/: create_env_file.ps1  create_env_file.sh
src/: lib.rs  main.rs
src/alerting/: email.rs
src/file_ops/: csv.rs  json.rs  settings.rs  structs.rs  thresholds.rs
src/stores/: gog.rs  microsoft_store.rs  steam.rs
src/structs/: microsoft_store_response.rs
src/tests/: helper.rs  settings_tests.rs
src/tests/api/: gog.rs  gog_pc.rs  microsoft_store.rs  microsoft_store_pc.rs  steam.rs  steam_pc.rs
src/tests/functional/: commands.rs
src/tests/unit/: settings.rs  settings_ops.rs  threshold_ops.rs  thresholds.rs
