[package]
name = "alerting"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
# Internal crates
structs = { path = "../structs" }
file_types = { path = "../file_types" }

# External crates
dotenv.workspace = true
dotenvy.workspace = true
lettre.workspace = true