[package]
name = "stores"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
#Internal crates
structs = { path = "../structs" }
file_types = { path = "../file_types" }

# External crates
reqwest = { workspace = true, features = ["json", "blocking"] }
dotenv.workspace = true
dotenvy.workspace = true
serde_json.workspace = true
regex.workspace = true
exitcode.workspace = true